Remove unused font, add dynamic quotes.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             //-->
         </script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="http://use.edgefonts.net/amaranth.js"></script>
     </head>
     <body>
         <div class="titlebar">
@@ -31,23 +30,14 @@
                 <li class="menuitem">&lt<a href="contact.html">contact</a>&gt</li>
             </div>
         </div>
-        <div class="titlebar"></div>
-        
+        <div class="titlebar"></div>    
         <div class="quote">
-        <p style="text-align:center">
-        <span>
-        &quot;Listen up rat bags!&quot;
-        </span>
-        <br>
-        <span class="quoteauthor">
-        -Jim Strachan
-        </span>
+        <p style="text-align:center" id="quote">
         </p>
         </div>
-        <p class="p">Not all heroes wear capes.</p>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script type="text/javascript" src="js/quotes.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-
     </body>
 </html>
