Add Download and GitHub link for Spark.

--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,16 @@
         <div class="titlebar"></div>
         <div class="p">
             <ul class="a">
-                <li><a href="https://github.com/bretsky/Spark">Spark</a></li>
-                <div class="p">Spark is an indie RPG with roguelike dungeons, programmed in Python using Pybearlib terminal.</div>
-                <li><a href="http://brettselby.xyz/timer/">Random Pomodoro</a></li>
-                <div class="p">Randomized Pomodoro timer, with customizable settings</div>
+                <li class="a"><a href="https://github.com/bretsky/Spark">Spark</a></li>
+                <div class="p">
+                    Indie RPG with roguelike dungeons, programmed in Python using Pybearlib terminal.
+                    <ul class="b">
+                	   <li class="b"><span class="p"><a href="https://github.com/bretsky/Spark/releases">Download.</a></span></li>
+                	   <li class="b"><span class="p"><a href="https://github.com/bretsky/Spark">GitHub</a></span></li>
+                    </ul>
+                </div>
+                <li class="a"><a href="http://brettselby.xyz/timer/">Random Pomodoro</a></li>
+                <div class="p">Online randomized Pomodoro timer, with customizable settings.</div>
             </ul>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
