--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
         </div>
         <div class="titlebar"></div>    
-        <div class="quote">
+        <div class="homepagequote">
         <p style="text-align:center" id="quote">
         </p>
         </div>
