Add Google mobile annotation.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/index.html">
         <script type="text/javascript">
             <!--
             if (screen.width <= 800) {
