--- a/m/index.html
+++ b/m/index.html
@@ -9,14 +9,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/index.html">
-        <script type="text/javascript">
-            <!--
-            if (screen.width <= 800) {
-                window.location = "http://m.brettselby.xyz/index.html";
-            }
-            //-->
-        </script>
+        <link rel="canonical" href="http://brettselby.xyz/index.html">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
