Remove filler text for mobile about page, fix error page hrefs, add Google mobile annotation.

--- a/about.html
+++ b/about.html
@@ -6,13 +6,17 @@
     <link href="apple-touch-icon.png" rel="apple-touch-icon" />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="css/normalize.min.css" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" /><script type="text/javascript">
+    <link href="css/main.css" rel="stylesheet" />
+    <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/about.html">
+    <script type="text/javascript">
             <!--
             if (screen.width <= 800) {
                 window.location = "http://m.brettselby.xyz/about.html";
             }
             //-->
-        </script><script src="js/vendor/modernizr-2.8.3.min.js"></script><script src="http://use.edgefonts.net/amaranth.js"></script>
+    </script>
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="http://use.edgefonts.net/amaranth.js"></script>
 </head>
 <body>
 <div class="titlebar">
