--- a/m/404.html
+++ b/m/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Page Not Found</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="http://m.brettselby.xyz/css/main.css">
     <style>
         html {
             display: table;
@@ -25,7 +25,7 @@
         <br>
         <p style="color: #79807E; width: 80%; font-family: aleo;; margin: auto; padding-bottom: 32px">Looks like you're lost! You might want to head back to <a href="index.html">safety</a>.</p>
     </div>
-    <script type="text/javascript" src="js/resizeText.js"></script>
+    <script type="text/javascript" src="http://m.brettselby.xyz/js/resizeText.js"></script>
 </body>
 </html>
 <!-- IE needs 512+ bytes: http://blogs.msdn.com/b/ieinternals/archive/2010/08/19/http-error-pages-in-internet-explorer.aspx -->
