--- a/m/about.html
+++ b/m/about.html
@@ -1,52 +1,52 @@
 <!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <title>About</title>
-        <meta name="description" content="About Brett Selby">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script type="text/javascript">
-            <!--
-            if (screen.width <= 800) {
-                window.location = "http://m.brettselby.xyz/about.html";
-            }
-            //-->
-        </script>
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-        <script src="http://use.edgefonts.net/amaranth.js"></script>
+<html lang="">
+<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>About</title>
+    <meta name="description" content="About Brett Selby"><meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+    <link href="css/normalize.min.css" rel="stylesheet" />
+    <link href="css/main.css" rel="stylesheet" />
+    <link rel="canonical" href="http://brettselby.xyz/about.html">
+    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="http://use.edgefonts.net/amaranth.js"></script>
+</head>
+<body>
+<div class="titlebar">
+<div class="pagetitle">About</div>
+</div>
 
-    </head>
-    <body>
-        <div class="titlebar">
-            <div class="pagetitle">About</div>
+<div class="menubar">
+<div class="menu">
+
+    <li class="menuitem">&lt;<a href="index.html">home</a>&gt;</li>
+    <li class="currentitem">&lt;<a href="about.html">about</a>&gt;</li>
+    <li class="menuitem">&lt;<a href="projects.html">projects</a>&gt;</li>
+    <li class="menuitem">&lt;<a href="contact.html">contact</a>&gt;</li>
+
+</div>
+</div>
+
+<div class="titlebar"></div>
+
+        <div class="p">
+            <ul class="a">
+                <li class="a">Education</li>
+                <div class="p">Kelowna Secondary (2014-2017)</div>
+                <li class="a">Programming</li>
+                <div class="p">I know:
+                <ul class="b">
+                <li cla>Python</li>
+                <li>Javascript</li>
+                <li>Java</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                </ul>
+                </div>
+            </ul>
         </div>
-        <div class="menubar">
-            <div class="menu">
-                <li class="menuitem">&lt<a href="index.html">home</a>&gt</li>
-                <li class="currentitem">&lt<a href="about.html">about</a>&gt</li>
-                <li class="menuitem">&lt<a href="projects.html">projects</a>&gt</li>
-                <li class="menuitem">&lt<a href="contact.html">contact</a>&gt</li>
-            </div>
-        </div>
-        <div class="titlebar"></div>
-        <br>
-        <div class="p"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam hendrerit ipsum augue, ut auctor enim ultricies a. Morbi pretium porta suscipit. In blandit eu magna luctus tristique. Aliquam sit amet vulputate lacus. Aliquam in enim eget orci facilisis elementum eu vel velit. Ut facilisis dui sapien, in lacinia dolor consectetur at. Nam porttitor mollis ligula sed dictum.</p>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script><script src="js/plugins.js"></script><script src="js/main.js"></script>
 
-        <p>Nullam finibus bibendum dapibus. Sed rutrum tincidunt iaculis. Nulla elit arcu, molestie vitae erat eget, suscipit finibus libero. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras fermentum lectus in lectus consequat vulputate. Pellentesque ac sem orci. Sed sed urna ac ex rutrum vehicula at vel ligula. Pellentesque fringilla erat ut libero porta, vel rutrum elit mollis. Quisque ex sem, vestibulum ac consequat sit amet, sagittis fringilla magna. Curabitur blandit non velit efficitur lobortis. Phasellus accumsan lacus ut nunc euismod, at tincidunt purus aliquet.</p>
-
-        <p>Donec elementum, erat ac iaculis rhoncus, sem odio dictum dui, at rhoncus sem orci non nibh. Pellentesque facilisis, purus vel molestie vestibulum, ex nibh congue orci, sit amet gravida mi velit id massa. Sed nec pulvinar lorem, sed maximus tortor. Quisque nec dapibus metus. Proin fermentum augue arcu, nec efficitur nisi vestibulum sit amet. Mauris nibh magna, vestibulum ac massa et, congue scelerisque magna. Nullam varius non urna ultricies ultricies.</p>
-
-        <p>Maecenas scelerisque rutrum enim non varius. Ut turpis elit, luctus eu risus vitae, ornare varius augue. Fusce maximus gravida purus. Nunc et dapibus turpis. Donec tempor, diam id volutpat pharetra, tortor erat mattis mi, at facilisis felis nibh in dui. Aenean rhoncus augue quis ante ornare vestibulum in eu libero. Nulla et finibus felis. Cras ac lacinia ante, sit amet sagittis dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus turpis nibh, eget porta elit dignissim vitae. Curabitur eget leo quam. Nam sit amet luctus ex. Etiam in metus dictum sem convallis rhoncus quis ut est.</p>
-
-        <p>Duis sapien dolor, sodales vitae ultricies ac, tempus vitae ante. Suspendisse blandit, turpis non dictum dapibus, est nulla faucibus leo, et lacinia felis nulla nec justo. Ut ac sapien convallis, aliquam tortor id, lacinia nibh. Vestibulum pretium massa eu efficitur ultricies. Sed mollis velit purus, quis feugiat ligula blandit quis. Aliquam quis nunc sit amet diam condimentum elementum. Pellentesque dictum ornare tempor. Maecenas porttitor dignissim purus sed bibendum. Nam accumsan ipsum quis fermentum venenatis.</p>
-        </div>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
-
-    </body>
+<p></p>
+</body>
 </html>
