--- a/m/contact.html
+++ b/m/contact.html
@@ -9,13 +9,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
-        <script type="text/javascript">
-            <!--
-            if (screen.width <= 800) {
-                window.location = "http://m.brettselby.xyz/contact.html";
-            }
-            //-->
-        </script>
+        <link rel="canonical" href="http://brettselby.xyz/contact.html">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <script src="http://use.edgefonts.net/amaranth.js"></script>
     </head>
