Add list class to contact page.

--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,9 @@
         <div class="titlebar"></div>
         <div class="p">
             <ul class="a">
-                <li>Email</li>
+                <li class="a">Email</li>
                 <div class="p">me@brettselby.xyz</div>
-                <li>Github</li>
+                <li class="a">Github</li>
                 <div class="p"><a href="https://github.com/bretsky">Profile</a></div>
             </ul>
         </div>
