Fix error page hrefs.

--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <div id="page" style="display: inline-block">
         <h1 class="quote" style="width: 80%;">"It’s okay to get lost every once in a while, sometimes getting lost is how we find ourselves."</h1>
         <br>
-        <p style="color: #79807E; width: 80%; font-family: aleo;; margin: auto; padding-bottom: 32px">Looks like you're lost! You might want to head back to <a href="index.html">safety</a>.</p>
+        <p style="color: #79807E; width: 80%; font-family: aleo;; margin: auto; padding-bottom: 32px">Looks like you're lost! You might want to head back to <a href="http://brettselby.xyz/index.html">safety</a>.</p>
     </div>
     <script type="text/javascript" src="http://brettselby.xyz/js/resizeText.js"></script>
 </body>
