--- a/500.html
+++ b/500.html
@@ -23,7 +23,7 @@
     <div id="page" style="display: inline-block">
         <h1 class="quote" style="width: 80%;">"The world breaks everyone, and afterward, some are strong at the broken places."</h1>
         <br>
-        <p style="color: #79807E; width: 80%; font-family: aleo;; margin: auto; padding-bottom: 32px">Seems like my website is broken! Why don't you check out <a href="projects.html">something else</a> while I fix it?</p>
+        <p style="color: #79807E; width: 80%; font-family: aleo;; margin: auto; padding-bottom: 32px">Seems like my website is broken! Why don't you check out <a href="http://brettselby.xyz/projects.html">something else</a> while I fix it?</p>
     </div>
     <script type="text/javascript" src="http://brettselby.xyz/js/resizeText.js"></script>
 </body>
