Add better mobile redirect.

--- a/about.html
+++ b/about.html
@@ -1,59 +1,47 @@
 <!doctype html>
 <html lang="">
-<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>About</title>
-    <meta name="description" content="About Brett Selby"><meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="apple-touch-icon.png" rel="apple-touch-icon" />
-    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link href="css/normalize.min.css" rel="stylesheet" />
-    <link href="css/main.css" rel="stylesheet" />
-    <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/about.html">
-    <script type="text/javascript">
-            <!--
-            if (screen.width <= 800) {
-                window.location = "http://m.brettselby.xyz/about.html";
-            }
-            //-->
-    </script>
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
-    <script src="http://use.edgefonts.net/amaranth.js"></script>
-</head>
-<body>
-<div class="titlebar">
-<div class="pagetitle">About</div>
-</div>
-
-<div class="menubar">
-<div class="menu">
-
-    <li class="menuitem">&lt;<a href="index.html">home</a>&gt;</li>
-    <li class="currentitem">&lt;<a href="about.html">about</a>&gt;</li>
-    <li class="menuitem">&lt;<a href="projects.html">projects</a>&gt;</li>
-    <li class="menuitem">&lt;<a href="contact.html">contact</a>&gt;</li>
-
-</div>
-</div>
-
-<div class="titlebar"></div>
-
-        <div class="p">
-            <ul class="a">
-                <li class="a">Education</li>
-                <div class="p">Kelowna Secondary (2014-2017)</div>
-                <li class="a">Programming</li>
-                <div class="p">I know:
-                <ul class="b">
-                <li cla>Python</li>
-                <li>Javascript</li>
-                <li>Java</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                </ul>
-                </div>
-            </ul>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<title>About</title>
+		<meta name="description" content="About Brett Selby"><meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href="apple-touch-icon.png" rel="apple-touch-icon" />
+		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
+		<link href="css/normalize.min.css" rel="stylesheet" />
+		<link href="css/main.css" rel="stylesheet" />
+		<link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/about.html">
+		<script src="js/mobileRedirect.js"></script>
+		<script src="js/vendor/modernizr-2.8.3.min.js"></script>
+	</head>
+	<body>
+		<div class="titlebar">
+		<div class="pagetitle">About</div>
+		</div>
+        <div class="menubar">
+            <div class="menu">
+                <li class="menuitem">&lt<a href="index.html?desktop=1">home</a>&gt</li>
+                <li class="currentitem">&lt<a href="about.html?desktop=1">about</a>&gt</li>
+                <li class="menuitem">&lt<a href="projects.html?desktop=1">projects</a>&gt</li>
+                <li class="menuitem">&lt<a href="contact.html?desktop=1">contact</a>&gt</li>
+            </div>
         </div>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script><script src="js/plugins.js"></script><script src="js/main.js"></script>
+		<div class="titlebar"></div>
 
-<p></p>
-</body>
+				<div class="p">
+					<ul class="a">
+						<li class="a">Education</li>
+						<div class="p">Kelowna Secondary (2014-2017)</div>
+						<li class="a">Programming</li>
+						<div class="p">I know:
+							<ul class="b">
+								<li cla>Python</li>
+								<li>Javascript</li>
+								<li>Java</li>
+								<li>HTML</li>
+								<li>CSS</li>
+							</ul>
+						</div>
+					</ul>
+				</div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script><script src="js/plugins.js"></script><script src="js/main.js"></script>
+	</body>
 </html>
