Fix mobile CSS and change highlight colour.

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 						<li class="a">Programming</li>
 						<div class="p">I know:
 							<ul class="b">
-								<li cla>Python</li>
+								<li>Python</li>
 								<li>Javascript</li>
 								<li>Java</li>
 								<li>HTML</li>
