--- a/m/about.html
+++ b/m/about.html
@@ -32,9 +32,9 @@
         <div class="p">
             <ul class="a">
                 <li class="a">Education</li>
-                <div class="p">Kelowna Secondary (2014-2017)</div>
+                <div class="indent">Kelowna Secondary (2014-2017)</div>
                 <li class="a">Programming</li>
-                <div class="p">I know:
+                <div class="indent">I know:
                 <ul class="b">
                 <li cla>Python</li>
                 <li>Javascript</li>
