--- a/m/contact.html
+++ b/m/contact.html
@@ -29,9 +29,9 @@
         <div class="p">
             <ul class="a">
                 <li class="a">Email</li>
-                <div class="p">me@brettselby.xyz</div>
+                <div class="indent">me@brettselby.xyz</div>
                 <li class="a">Github</li>
-                <div class="p"><a href="https://github.com/bretsky">Profile</a></div>
+                <div class="indent"><a href="https://github.com/bretsky">Profile</a></div>
             </ul>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
