--- a/m/projects.html
+++ b/m/projects.html
@@ -29,7 +29,7 @@
         <div class="p">
             <ul class="a">
                 <li class="a"><a href="https://github.com/bretsky/Spark">Spark</a></li>
-                <div class="p">
+                <div class="indent">
                     Indie RPG with roguelike dungeons, programmed in Python using Pybearlib terminal.
                     <ul class="b">
                 	   <li class="b"><span class="p"><a href="https://github.com/bretsky/Spark/releases">Download.</a></span></li>
@@ -37,7 +37,7 @@
                     </ul>
                 </div>
                 <li class="a"><a href="http://brettselby.xyz/timer/">Random Pomodoro</a></li>
-                <div class="p">Online randomized Pomodoro timer, with customizable settings.</div>
+                <div class="indent">Online randomized Pomodoro timer, with customizable settings.</div>
             </ul>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
