Add footer, desktop/mobile links, optimize mobile redirect script.

--- a/about.html
+++ b/about.html
@@ -25,23 +25,28 @@
             </div>
         </div>
 		<div class="titlebar"></div>
-
-				<div class="p">
-					<ul class="a">
-						<li class="a">Education</li>
-						<div class="p">Kelowna Secondary (2014-2017)</div>
-						<li class="a">Programming</li>
-						<div class="p">I know:
-							<ul class="b">
-								<li>Python</li>
-								<li>Javascript</li>
-								<li>Java</li>
-								<li>HTML</li>
-								<li>CSS</li>
-							</ul>
-						</div>
+		<div class="p">
+			<ul class="a">
+				<li class="a">Education</li>
+				<div class="p">Kelowna Secondary (2014-2017)</div>
+				<li class="a">Programming</li>
+				<div class="p">I know:
+					<ul class="b">
+						<li>Python</li>
+						<li>Javascript</li>
+						<li>Java</li>
+						<li>HTML</li>
+						<li>CSS</li>
 					</ul>
 				</div>
+			</ul>
+		</div>
+		<div class="titlebar" style="position: absolute; bottom: 32px; left: 12.5%"></div>
+        <div class="p footer">
+            <div class="footerelement">
+                <a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a href="http://m.brettselby.xyz/index.html">Mobile</a>
+            </div>
+        </div>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script><script src="js/plugins.js"></script><script src="js/main.js"></script>
 	</body>
 </html>
