--- a/m/contact.html
+++ b/m/contact.html
@@ -34,6 +34,12 @@
                 <div class="indent"><a href="https://github.com/bretsky">Profile</a></div>
             </ul>
         </div>
+        <div class="titlebar" style="position: absolute; bottom: 32px"></div>
+        <div class="p footer">
+            <div class="footerelement">
+                <a href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a style="text-decoration: underline" href="http://m.brettselby.xyz/index.html">Mobile</a>
+            </div>
+        </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
