--- a/m/index.html
+++ b/m/index.html
@@ -29,6 +29,12 @@
         <p style="text-align:center" id="quote">
         </p>
         </div>
+        <div class="titlebar" style="position: absolute; bottom: 32px"></div>
+        <div class="p footer">
+            <div class="footerelement">
+                <a href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a style="text-decoration: underline" href="http://m.brettselby.xyz/index.html">Mobile</a>
+            </div>
+        </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script type="text/javascript" src="js/quotes.js"></script>
         <script src="js/plugins.js"></script>
