--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,12 @@
                 <div class="p">Online randomized Pomodoro timer, with customizable settings.</div>
             </ul>
         </div>
+        <div class="titlebar" style="position: absolute; bottom: 32px; left: 12.5%"></div>
+        <div class="p footer">
+            <div class="footerelement">
+                <a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a href="http://m.brettselby.xyz/index.html">Mobile</a>
+            </div>
+        </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
