Center footer links.

--- a/m/contact.html
+++ b/m/contact.html
@@ -37,7 +37,7 @@
         <div class="titlebar" style="position: absolute; bottom: 32px"></div>
         <div class="p footer">
             <div class="footerelement">
-                <a href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a style="text-decoration: underline" href="http://m.brettselby.xyz/index.html">Mobile</a>
+                <span class="left"><a href="http://brettselby.xyz/index.html?desktop=1">Desktop</a></span> | <span class="right"><a style="text-decoration: underline" href="http://m.brettselby.xyz/index.html">Mobile</a></span>
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
