--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
         <div class="titlebar" style="position: absolute; bottom: 32px; left: 12.5%"></div>
         <div class="p footer">
             <div class="footerelement">
-                <a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a> | <a href="http://m.brettselby.xyz/index.html">Mobile</a>
+                <span class="left"><a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a></span> | <span class="right"><a href="http://m.brettselby.xyz/index.html">Mobile</a></span>
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
