--- a/contact.html
+++ b/contact.html
@@ -34,10 +34,11 @@
                 <div class="p"><a href="https://github.com/bretsky">Profile</a></div>
             </ul>
         </div>
-        <div class="titlebar" style="position: absolute; bottom: 32px; left: 12.5%"></div>
+        <div style="margin-bottom: 53px"></div>
+        <div class="titlebar" style="position: fixed; bottom: 32px; left: 12.5%"></div>
         <div class="p footer">
             <div class="footerelement">
-                <span class="left"><a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a></span> | <span class="right"><a href="http://m.brettselby.xyz/index.html">Mobile</a></span>
+                <span class="left"><a style="text-decoration: underline" href="http://brettselby.xyz/contact.html?desktop=1">Desktop</a></span> | <span class="right"><a href="http://m.brettselby.xyz/contact.html">Mobile</a></span>
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
