--- a/m/index.html
+++ b/m/index.html
@@ -29,7 +29,8 @@
         <p style="text-align:center" id="quote">
         </p>
         </div>
-        <div class="titlebar" style="position: absolute; bottom: 32px"></div>
+        <div style="margin-bottom: 53px"></div>
+        <div class="titlebar" style="position: fixed; bottom: 32px; left: 0px"></div>
         <div class="p footer">
             <div class="footerelement">
                 <span class="left"><a href="http://brettselby.xyz/index.html?desktop=1">Desktop</a></span> | <span class="right"><a style="text-decoration: underline" href="http://m.brettselby.xyz/index.html">Mobile</a></span>
