--- a/brett.html
+++ b/brett.html
@@ -2,27 +2,26 @@
 <html class="no-js" lang="">
     <head>
         <meta charset="utf-8">
-        <title>Brettbot</title>
+        <title>Brett</title>
         <meta name="description" content="Simulated version of Brett">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/brett.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <div class="chat">
+        <div id="chat" class="chat">
         </div>
         <div class="sms-container">
             <div class="fulltitlebar" style="width=100%;z-index:3"></div>
             <div class="send-container">
-                <form id="sms" onsubmit="alert('hey')">
-                    <input id="sms-text" placeholder="Send Message" type="text" class="sms-input" style="font-family:aleo"></input>
-                    <button id="send-button" type="submit" class="sms-send"><img src="send-button.png"></img></button> 
-                </form>
+                <input id="sms-text" placeholder="Send Message" type="text" class="sms-input" style="font-family:aleo"></input>
+                <button id="send-button" class="sms-send"><img src="send-button.png" onclick="getReply()"></img></button> 
             </div>
         </div>
-
-       <script src="js/brett.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="js/brett.js"></script>
     </body>
