--- a/brett.html
+++ b/brett.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/brett.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://use.fontawesome.com/c02d577db7.js"></script>
     </head>
     <body>
         <div id="chat" class="chat">
@@ -19,7 +20,7 @@
             <div class="fulltitlebar" style="width=100%;z-index:3"></div>
             <div class="send-container">
                 <input id="sms-text" placeholder="Send Message" type="text" class="sms-input" style="font-family:aleo"></input>
-                <button id="send-button" class="sms-send"><img src="send-button.png" onclick="getReply()"></img></button> 
+                <button id="send-button" class="sms-button" onclick="getReply()"><i class="fa fa-paper-plane" style="color:#D1F3F9"></i></button> 
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
