Add bio to homepage.

--- a/m/index.html
+++ b/m/index.html
@@ -29,6 +29,8 @@
         <p style="text-align:center" id="quote">
         </p>
         </div>
+        <br>
+        <div class="p">Future University of Waterloo Software Engineering student. I like making things on computers. Interested in natural language processing, genetic algorithms, graph theory, random generation, game development, and various other nerdy things. I play too many video games. My current favourites are Counter-Strike: Global Offensive, Overwatch, League of Legends, Europa Universalis 4 and Rimworld. My favourite CS:GO team is Cloud9. In real life, I enjoy training in taekwondo, learning languages, and having stupid arguments with my friends.</div>
         <div style="margin-bottom: 53px"></div>
         <div class="titlebar" style="position: fixed; bottom: 32px; left: 0px"></div>
         <div class="p footer">
