Chatbot interface and bugfixing complete.

--- a/brett.html
+++ b/brett.html
@@ -20,9 +20,15 @@
             <div class="fulltitlebar" style="width=100%;z-index:3"></div>
             <div class="send-container">
                 <input id="sms-text" placeholder="Send Message" type="text" class="sms-input" style="font-family:aleo"></input>
-                <button id="send-button" class="sms-button" onclick="getReply()"><i class="fa fa-paper-plane" style="color:#D1F3F9"></i></button> 
+                <button id="send-button" class="sms-button" onclick="getReply()">
+                    <span class="fa-stack">
+                        <i class="fa fa-circle fa-stack-2x" style="color:#4B7084; left: 1px"></i>
+                        <i class="fa fa-paper-plane fa-stack-1x" style="color:#D1F3F9"></i>
+                    </span>
+                </button> 
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script src="js/mobile-chrome-vh-fix.js"></script>
         <script src="js/brett.js"></script>
     </body>
