--- a/index.html
+++ b/index.html
@@ -7,36 +7,114 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/index.html">
-        <script src="js/mobileRedirect.js"></script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <div class="titlebar">
-            <div class="pagetitle">Home</div>
-        </div>
-        <div class="menubar">
-            <div class="menu">
-                <li class="currentitem">&lt<a href="index.html?desktop=1">home</a>&gt</li>
-                <li class="menuitem">&lt<a href="about.html?desktop=1">about</a>&gt</li>
-                <li class="menuitem">&lt<a href="projects.html?desktop=1">projects</a>&gt</li>
-                <li class="menuitem">&lt<a href="contact.html?desktop=1">contact</a>&gt</li>
+        <div class="content">
+            <div class="titlebar">
+                <div class="pagetitle">Home</div>
             </div>
-        </div>
-        <div class="titlebar"></div>    
-        <div class="homepagequote">
-        <p style="text-align:center" id="quote">
-        </p>
-        </div>
-        <br>
-        <div class="p">Future University of Waterloo Software Engineering student. I like making things on computers. Interested in natural language processing, genetic algorithms, graph theory, random generation, game development, and various other nerdy things. I play too many video games. My current favourites are Counter-Strike: Global Offensive, Overwatch, League of Legends, Europa Universalis 4 and Rimworld. My favourite CS:GO team is Cloud9. In real life, I enjoy training in taekwondo, learning languages, and having stupid arguments with my friends.</div>
-        <div style="margin-bottom: 53px"></div>
-        <div class="titlebar" style="position: fixed; bottom: 32px; left: 12.5%"></div>
-        <div class="p footer">
-            <div class="footerelement">
-                <span class="left"><a style="text-decoration: underline" href="http://brettselby.xyz/index.html?desktop=1">Desktop</a></span> | <span class="right"><a href="http://m.brettselby.xyz/index.html">Mobile</a></span>
+            <div class="menubar">
+                <div class="menu">
+                    <li class="currentitem">&lt<a class="menulink" href="index.html?desktop=1">home</a>&gt</li>
+                    <li class="menuitem">&lt<a class="menulink" href="projects.html?desktop=1">projects</a>&gt</li>
+                    <li class="menuitem">&lt<a class="menulink" href="info.html?desktop=1">info</a>&gt</li>
+                </div>
+            </div>
+            <div class="titlebar"></div>
+            <div class="table">
+                <div class="widecol">
+                    <div class="cell">
+                        <div class="celltitle">
+                            Education
+                        </div>
+                        <hr>
+                        <div class="p">
+                            University of Waterloo Software Engineering 1B 
+                        </div>
+                    </div>
+                    <div class="cell">
+                        <div class="celltitle">
+                            Interests
+                        </div>
+                        <hr>
+                        <div class="p">
+                            <ul>
+                                <li>
+                                    Programming
+                                </li>
+                                <li>
+                                    Taekwondo
+                                </li>
+                                <li>
+                                    Languages (English, French, Japanese)
+                                </li>
+                                <li>
+                                    Gaming (<a href="http://na.op.gg/summoner/userName=Furukawa">LoL</a>, <a href="https://steamcommunity.com/id/bretsky">CS:GO</a>, <a href="https://playoverwatch.com/en-us/career/pc/Bretsky-1110">Overwatch</a>)
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="cell" style="padding: 0px">
+                        <img class="imagepanel" src="img/storm.jpg"/>                    
+                    </div>
+                    <div class="cell" style="text-align:center; font-family: aleo, serif; font-style: italic; font-size: 16px; letter-spacing: 0.05em;" id="quote">
+                        “This is a quote.”
+                    </div>
+                    <div class="cell">
+                        <div class="celltitle">
+                            Skills
+                        </div>
+                        <hr>
+                        <div class="p">
+                            <ul>
+                                <li>
+                                    Python
+                                </li>
+                                <li>
+                                    C/C++
+                                </li>
+                                <li>
+                                    Java
+                                </li>
+                                <li>
+                                    JavaScript
+                                </li>
+                                <li>
+                                    HTML
+                                </li>
+                                <li>
+                                    CSS
+                                </li>
+                                <li>
+                                    Git
+                                </li>
+                                <li>
+                                    JQuery
+                                </li>
+                                <li>
+                                    React
+                                </li>
+                                <li>
+                                    Qt
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div style="margin-bottom: 53px"></div>
+            <div class="titlebar" style="position: fixed; bottom: 32px; left: math(8% + 1px)"></div>
+            <div class="p footer">
+                <div class="footerelement">
+                    Brett Selby
+                </div>
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
