--- a/projects.html
+++ b/projects.html
@@ -7,44 +7,105 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo">
         <link rel="stylesheet" href="css/normalize.min.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="alternate" media="only screen and (max-width: 640px)" href="http://m.brettselby.xyz/projects.html">
-        <script src="js/mobileRedirect.js"></script>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
-        <div class="titlebar">
-            <div class="pagetitle">Projects</div>
-        </div>
-        <div class="menubar">
-            <div class="menu">
-                <li class="menuitem">&lt<a href="index.html?desktop=1">home</a>&gt</li>
-                <li class="menuitem">&lt<a href="about.html?desktop=1">about</a>&gt</li>
-                <li class="currentitem">&lt<a href="projects.html?desktop=1">projects</a>&gt</li>
-                <li class="menuitem">&lt<a href="contact.html?desktop=1">contact</a>&gt</li>
+        <div class="content">
+            <div class="titlebar">
+                <div class="pagetitle">Projects</div>
             </div>
-        </div>
-        <div class="titlebar"></div>
-        <div class="p">
-            <ul class="a">
-                <li class="a"><a href="https://github.com/bretsky/Spark">Spark</a></li>
-                <div class="p">
-                    Indie RPG with roguelike dungeons, programmed in Python using Pybearlib terminal.
-                    <ul class="b">
-                	   <li class="b"><span class="p"><a href="https://github.com/bretsky/Spark/releases">Download.</a></span></li>
-                	   <li class="b"><span class="p"><a href="https://github.com/bretsky/Spark">GitHub</a></span></li>
-                    </ul>
+            <div class="menubar">
+                <div class="menu">
+                    <li class="menuitem">&lt<a class="menulink" href="index.html?desktop=1">home</a>&gt</li>
+                    <li class="currentitem">&lt<a class="menulink" href="projects.html?desktop=1">projects</a>&gt</li>
+                    <li class="menuitem">&lt<a class="menulink" href="info.html?desktop=1">info</a>&gt</li>
                 </div>
-                <li class="a"><a href="http://brettselby.xyz/timer/">Random Pomodoro</a></li>
-                <div class="p">Online randomized Pomodoro timer, with customizable settings.</div>
-            </ul>
-        </div>
-        <div style="margin-bottom: 53px"></div>
-        <div class="titlebar" style="position: fixed; bottom: 32px; left: 12.5%"></div>
-        <div class="p footer">
-            <div class="footerelement">
-                <span class="left"><a style="text-decoration: underline" href="http://brettselby.xyz/projects.html?desktop=1">Desktop</a></span> | <span class="right"><a href="http://m.brettselby.xyz/projects.html">Mobile</a></span>
+            </div>
+            <div class="titlebar"></div>
+            <div class="table">
+                <a href="https://github.com/bretsky/Spark/releases">
+                    <div class="cell">
+                        <div class="celltitle">
+                            Spark
+                        </div>
+                        <hr>
+                        <div class="p">
+                            Roguelike with random procedurally generated dungeons.
+                            <hr>
+                            Made with:
+                            <ul class="b">
+                                <li>
+                                    Python
+                                </li>
+                                <li>
+                                    BearLibTerminal
+                                </li>
+                                <li>
+                                    JSON
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </a>
+                <a href="http://brettselby.xyz/timer/">
+                    <div class="cell">
+                        <div class="celltitle">
+                            Random Pomodoro
+                        </div>
+                        <hr>
+                        <div class="p">
+                            Online randomized Pomodoro timer, with customizable settings.
+                            <hr>
+                            Made with:
+                            <ul class="b">
+                                <li>
+                                    JavaScript
+                                </li>
+                                <li>
+                                    JQuery
+                                </li>
+                                <li>
+                                    HTML/CSS
+                                </li>
+                                <li>
+                                    Move.js
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </a>
+                <a href="https://github.com/hermord/messenger-latex">
+                    <div class="cell">
+                        <div class="celltitle">
+                            Messenger LaTeX
+                        </div>
+                        <hr>
+                        <div class="p">
+                            Chrome extension which recognizes and properly renders LaTeX markup in Facebook Messenger.
+                            <hr>
+                            Made with:
+                            <ul class="b">
+                                <li>
+                                    JavaScript
+                                </li>
+                                <li>
+                                    MathJax
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div style="margin-bottom: 53px"></div>
+            <div class="titlebar" style="position: fixed; bottom: 32px; left:  math(8% + 1px)"></div>
+            <div class="p footer">
+                <div class="footerelement">
+                    Brett Selby
+                </div>
             </div>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
